gridfire.lab.replay: refactoring, and adding replay results as comments.